--- a/RecetasMAUI/Views/AppShell.xaml
+++ b/RecetasMAUI/Views/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="RecetasMAUI.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:RecetasMAUI"
+    xmlns:local="clr-namespace:RecetasMAUI" BackgroundColor="#5520F0" Shell.TitleColor="AliceBlue"
     Title="RecetasMAUI">
 
     <ShellContent
