--- a/RecetasMAUI/Views/AppShell.xaml
+++ b/RecetasMAUI/Views/AppShell.xaml
@@ -4,8 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:RecetasMAUI" BackgroundColor="#5520F0" Shell.TitleColor="AliceBlue"
+    xmlns:vm="clr-namespace:RecetasMAUI.ViewModels"
     Title="RecetasMAUI">
 
+    <Shell.BindingContext>
+        <vm:RecetasViewModel></vm:RecetasViewModel>
+    </Shell.BindingContext>
+    
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
